--- a/index.html
+++ b/index.html
@@ -1,48 +1,115 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>这是一个表单</title>
-    <link rel="stylesheet" href="style.css">
-    <style type="text/css">
-        h1{
-            color: chartreuse;
-            font-family: 宋体;
-            font-size: 26px;
-        }
-    </style>
+    <title>我的个人简历</title>
+    <script src="/xx.js"></script>
+    <link href="/xx.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <form>
-        name:
-        <input type="text"/>
-        password:
-        <input type="password"/>
-    </form>
-    <form>
-        <input type="radio" name="sex" value="male"/>男
-        <input type="radio" name="sex" value="femal"/>女
-    </form>
-    <form>
-        <input type="checkbox" name="beijing"/>beijing</br>
-        <input type="checkbox" name="shanghai"/>shanghai</br>
-    </form>
-    <form name="input" action="form.html" method="get">
-        username:
-        <input type="text" name="user" />
-        <input type="submit" value="Submit" />
-    </form>
-    <p class="back">清华计算机中心</p>
-    <h1 id="back1">清华计算机中心</h1>
-    <h2>清华计算机中心</h2>
-    <div class="polaris">
-        <span class="beijing">
-            beijing
-        </span>
-        <span>
-            polaris
-        </span>犹太人犹太人犹太人被
-    </div>动 
-1111111111111111111111111111111111111
+<h1 align="center">个人简历</h1>
+<table border="1" align="center" bgcolor="#deb887">
+    <tr align="center" >
+        <th width="720" align="left" bgcolor="#a9a9a9" colspan="5">&nbsp;&nbsp;基&nbsp;本&nbsp;信&nbsp;息</th>
+    </tr>
+    <tr align="center">
+        <th width="150">姓&nbsp;&nbsp;&nbsp;&nbsp;名</th>
+        <td width="130" align="left">李俊</td>
+        <th width="150">性&nbsp;&nbsp;&nbsp;&nbsp;别</th>
+        <td width="130" align="left">男</td>
+        <td rowspan="6"><img src="image/1.jpg" width="170" height="180"></td>
+    </tr>
+    <tr align="center">
+        <th width="150">年&nbsp;&nbsp;&nbsp;&nbsp;龄</th>
+        <td width="130" align="left">24岁</td>
+        <th width="150">户&nbsp;&nbsp;&nbsp;&nbsp;口</th>
+        <td width="130" align="left">河北保定</td>
+    </tr>
+    <tr align="center">
+        <th width="150">工作年限</th>
+        <td width="130" align="left">两年以上</td>
+        <th width="150">民&nbsp;&nbsp;&nbsp;&nbsp;族</th>
+        <td width="130" align="left">汉族</td>
+    </tr>
+    <tr align="center">
+        <th width="150">地&nbsp;&nbsp;&nbsp;&nbsp;址</th>
+        <td width="130" align="left">北京朝阳区</td>
+        <th width="150">联系电话</th>
+        <td width="130" align="left">15321975883</td>
+    </tr>
+    <tr align="center">
+        <th width="150">学&nbsp;&nbsp;&nbsp;&nbsp;历</th>
+        <td width="130" align="left">本科</td>
+        <th width="150">毕业院校</th>
+        <td width="130" align="left">北京城市学院</td>
+    </tr>
+    <tr align="center">
+        <th width="150">专&nbsp;&nbsp;&nbsp;&nbsp;业</th>
+        <td width="130">计算机科学与技术</td>
+        <th width="150">电子邮件</th>
+        <td width="130">qoim@live.com</td>
+    </tr>
+    <tr align="center" >
+        <th width="720" align="left" bgcolor="#a9a9a9" colspan="5">&nbsp;&nbsp;自&nbsp;我&nbsp;评&nbsp;价</th>
+    </tr>
+    <tr>
+        <th width="720" align="left" colspan="5">
+            <div style="width:750px;height: 250px;text-indent:2em;">
+                <ol>
+                    <li>具备创新意识、能独立分析和解决问题、具有较好的动手能力,对待工作细致负责、组织管理能力强。善于学习新技术，肯钻研，肯吃苦，纪律观念极强，为人正直，乐于助人，善于与他人协同工作。</li>
+                    <li>具备项目的开发和管理经验，曾经参与多个实际项目的开发，对项目整个开发流程熟悉，始终贯彻以用例为驱动，以体系结构为核心，增量和迭代式开发的思想。能够协调组员共同工作，使整个团队上下一条心，共同进步。</li>
+                    <li>本人性格开朗，为人谦和，注重事实，讲究时效。个人的奋斗目标是成为一名优秀的项目负责人。</li>
+                    <li>我将以饱满的热情投入到工作岗位。相信您的信任和我的实力将为我们共同的未来带来共同的成功!</li>
+                </ol>
+            </div>
+        </th>
+    </tr>
+    <tr align="center" >
+        <th width="720" align="left" bgcolor="#a9a9a9" colspan="5">&nbsp;&nbsp;教&nbsp;育&nbsp;经&nbsp;历</th>
+    </tr>
+    <tr>
+        <th width="720" align="left" colspan="5">
+            <div style="width:750px;height:50px;text-indent:2em;">
+                <ul>
+                    <li>2013/07—2014/1	&nbsp;&nbsp;清华大学计算机中心&nbsp;&nbsp;&nbsp;&nbsp;Java高级软件开发工程师</li>
+                    <li>2007/09--2011/0	&nbsp;&nbsp;北京城市学院&nbsp;&nbsp;&nbsp;&nbsp;计算机科学与技术（本科）</li>
+                </ul>
+            </div>
+        </th>
+    </tr>
+    <tr align="center" >
+        <th width="720" align="left" bgcolor="#a9a9a9" colspan="5">&nbsp;&nbsp;工&nbsp;作&nbsp;经&nbsp;验</th>
+    </tr>
+    <tr>
+        <th width="720" align="left" colspan="5">
+            <div style="width:750px;height:580px;text-indent:2em;">
+                <dl>
+                    <dt>2011-2013：</dt>
+                    <dd>xxxxx科技有限公司</dd>
+                    <dt>所属行业：</dt>
+                    <dd>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</dd>
+                    <dt>所属部门：</dt>
+                    <dd>xxxx</dd>
+                    <dt>主要职责:</dt>
+                    <dd>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</dd>
+                    <p>--------------------------------------------------------------------------------------------------</p>
+                    <dt><h4>2011.1-2011.12：</h4></dt>
+                    <dd><h5>北京xxxx服务有限责任公司</h5></dd>
+                    <dt><h4>所属行业：</h4></dt>
+                    <dd><h5>xx行业</h5></dd>
+                    <dt><h4>所属部门：</h4></dt>
+                    <dd><h5>xx部</h5></dd>
+                    <dt><h4>主要职责:</h4></dt>
+                    <dd><h5>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</h5></dd>
+                </dl>
+            </div>
+        </th>
+    </tr>
+    <tr>
+        <th width="720" align="center" colspan="5">
+            <span id="ceshi"><a href="#" style="color: red" type="font-size:20px;"> 到此结束/返回顶部</a></span>
+        </th>
+    </tr>
+</table>
 </body>
 </html>
