--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>我的个人简历哈哈哈哈哈</title>
+    <title>我的个人简历JAVA11111111</title>
     <script src="/xx.js"></script>
     <link href="/xx.css" rel="stylesheet" type="text/css">
 </head>
